Fixed styling/margin issue on tablet.

--- a/app/toura/styles/components/_child-node-text.scss
+++ b/app/toura/styles/components/_child-node-text.scss
@@ -1,4 +1,5 @@
 .component.child-node-text {
+  margin: 0 10px 10px;
   .child-node-body-text {
     @include body-text;
   }
